--- a/RadzenBlazorDemos/RadzenBlazorDemos.csproj
+++ b/RadzenBlazorDemos/RadzenBlazorDemos.csproj
@@ -9,5 +9,8 @@
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly" Version="7.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Components.WebAssembly.DevServer" Version="7.0.0" PrivateAssets="all" />
 	<PackageReference Include="Microsoft.EntityFrameworkCore.InMemory" Version="7.0.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Razor.Extensions" Version="6.0.10" />
+    <PackageReference Include="Microsoft.CodeAnalysis.CSharp" Version="4.4.0-4.final" />
+    <PackageReference Include="Microsoft.CodeAnalysis.Razor" Version="6.0.10" />
   </ItemGroup>
 </Project>
